--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MevBook</title>
+  <title>Mevbook</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -11,7 +11,7 @@
 
   <!-- Top Header -->
   <div class="top-header">
-    <div class="logo">Mevbook</div>
+    <div class="logo">MevBook</div>
     <div class="top-right">
       <input type="text" placeholder="Search Mevbook 🔍" class="search-bar">
       <i class="fas fa-comment"></i>
